# clip-glimpse

./: AGENTS.md  Cargo.toml  README.cn.md  README.md  architecture_design.md  build.rs  config.example.toml
.cargo/: config.toml
src/: cli.rs  clipboard.rs  history.rs  hotkey.rs  icon.rs  logger.rs  main.rs  notify.rs  protocol.rs  qr_gen.rs  qr_read.rs  screen.rs  tray.rs
src/generate/: mod.rs  ui.rs
src/read/: mod.rs  region.rs  scanner.rs  ui.rs
