[package]
name = "clip_glimpse"
version = "0.1.0"
edition = "2021"
description = "Transfer text across air-gapped cloud desktops via QR codes"
license = "MIT"

[dependencies]
eframe = "0.31"
egui = "0.31"
qrcode = "0.14"
rxing = "0.4"
image = "0.25"
clap = { version = "4", features = ["derive"] }
tray-icon = "0.19"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
